# budget_tracker

client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  Page.tsx  index.scss  main.tsx  page.module.scss
client/src/components/: Card.tsx  DonutChart.tsx  Elements.tsx  Icon.tsx  LineChart.tsx  Loading.tsx  Login.tsx  ProtectedRoute.tsx  Register.tsx  Table.tsx
client/src/context/: AuthContext.tsx  DataContext.tsx
client/src/hook/: useApi.ts  useDebounce.ts
client/src/style/: _variable.scss  card.module.scss  elements.module.scss  loading.module.scss  login.module.scss  register.module.scss  table.module.scss
client/src/utils/: api.tsx
server/: main.py  pyproject.toml
server/app/core/: database.py
server/app/models/: category.py  expense.py  user.py
server/app/schemas/: category.py  expense.py  user.py
server/app/services/: category.py  expense.py  user.py
server/app/utils/: session.py  token.py
